--- a/_imgs.scss
+++ b/_imgs.scss
@@ -6,6 +6,14 @@
   background-image: url(imgs/slime.png);
 }
 
+.spider {
+  background-image: url(imgs/spider.png);
+}
+
+.reaper {
+  background-image: url(imgs/reaper.png);
+}
+
 .fence {
   background-image: url(imgs/fence.png);
 }
@@ -42,8 +50,8 @@
   background-image: url(imgs/wall.png);
 }
 
-.small-tree {
-  background-image: url(imgs/tree-smalĺ.png);
+.tree {
+  background-image: url(imgs/tree.png);
 }
 
 .stone-doors {
@@ -52,4 +60,12 @@
 
 .health-potion {
   background-image: url(imgs/heatlh-potion.png);
+}
+
+.big-health-potion {
+  background-image: url(imgs/big-heatlh-potion.png);
+}
+
+.key {
+  background-image: url(imgs/key.png);
 }
